Add HdMorph class, utilties and demos

--- a/Demos/Properties/launchSettings.json
+++ b/Demos/Properties/launchSettings.json
@@ -79,6 +79,18 @@
 		"InverseKinematicsPerformanceDemo": {
 			"commandName": "Project",
 			"commandLineArgs": "InverseKinematicsPerformanceDemo"
+		},
+		"PrintHdMorphDemo": {
+			"commandName": "Project",
+			"commandLineArgs": "PrintHdMorphDemo"
+		},
+		"SaveHdMorphDemo": {
+			"commandName": "Project",
+			"commandLineArgs": "SaveHdMorphDemo"
+		},
+		"ApplyHdMorphDemo": {
+			"commandName": "Project",
+			"commandLineArgs": "ApplyHdMorphDemo"
 		}
 	}
 }
