Switch to new csproj system

--- a/EmbedShaders.targets
+++ b/EmbedShaders.targets
@@ -1,16 +1,9 @@
-<Project ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-	<PropertyGroup>
-		<StartWorkingDirectory>$(SolutionDir)</StartWorkingDirectory>
-		<StartArguments>--data=$(SolutionDir)work</StartArguments>
-	</PropertyGroup>
-
+<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<ItemGroup>
-		<Compile Include="Properties\AssemblyInfo.cs" />
+		<PackageReference Include="Microsoft.HLSL.CSharpVB" Version="1.0.1" />
 	</ItemGroup>
-
+	
 	<ItemGroup>
-		<Compile Include="src\**\*.cs" />
-		
 		<VertexShader Include="src\**\*.vs.hlsl">
 			<EnableDebuggingInfo>True</EnableDebuggingInfo>
 			<AdditionalIncludeDirectories>src</AdditionalIncludeDirectories>
@@ -23,12 +16,7 @@
 			<EnableDebuggingInfo>True</EnableDebuggingInfo>
 			<AdditionalIncludeDirectories>src</AdditionalIncludeDirectories>
 		</ComputeShader>
-		
-		<None Include="src\**\*" Exclude="**\*.cs;**\*.vs.hlsl;**\*.ps.hlsl;**\*.cs.hlsl"></None>
 	</ItemGroup>
-
-	<Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-	<Import Project="packages\Microsoft.HLSL.CSharpVB.1.0.1\build\Microsoft.HLSL.CSharpVB.targets" Condition="Exists('packages\Microsoft.HLSL.CSharpVB.1.0.1\build\Microsoft.HLSL.CSharpVB.targets')"/>
 	
 	<Target Name="EmbedCompiledShaders" DependsOnTargets="FxCompile" AfterTargets="AfterResGen">
 		<ItemGroup>
