Set x64 target-platform for Viewer project
While the assembly itself is platform-independent, I'm only distributing
with x64 DLLs.

--- a/Viewer/Viewer.csproj
+++ b/Viewer/Viewer.csproj
@@ -3,6 +3,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net452</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <Import Project="..\CommonAssemblyAttributes.targets" />
   <Import Project="..\RunSettings.targets" />
