--- a/Viewer/Viewer.csproj
+++ b/Viewer/Viewer.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="SharpDX.DXGI" Version="4.0.1" />
     <PackageReference Include="SharpDX.Mathematics" Version="4.0.1" />
     <PackageReference Include="SharpDX.XAudio2" Version="4.0.1" />
+    <PackageReference Include="System.ValueTuple" Version="4.4.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InteropTypes\InteropTypes.csproj" />
