Scaffolding for 2D inverse kinematics demo app
Currently just sets up a Direct2d to render to a form, then renders a
circle each frame.

--- a/Demos/Properties/launchSettings.json
+++ b/Demos/Properties/launchSettings.json
@@ -63,6 +63,10 @@
 		"RigidBoneSystemPerformanceDemo": {
 			"commandName": "Project",
 			"commandLineArgs": "RigidBoneSystemPerformanceDemo"
+		},
+		"FlatIk.FlatIkApp": {
+			"commandName": "Project",
+			"commandLineArgs": "FlatIk.FlatIkApp"
 		}
 	}
 }
