--- a/Demos/Demos.csproj
+++ b/Demos/Demos.csproj
@@ -15,6 +15,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System.Speech" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <Import Project="..\EmbedShaders.targets" />
