Add demo app that prints bone hierarchy

--- a/Demos/Properties/launchSettings.json
+++ b/Demos/Properties/launchSettings.json
@@ -67,6 +67,10 @@
 		"FlatIk.FlatIkApp": {
 			"commandName": "Project",
 			"commandLineArgs": "FlatIk.FlatIkApp"
+		},
+		"PrintBoneHierarchyApp": {
+			"commandName": "Project",
+			"commandLineArgs": "PrintBoneHierarchyApp"
 		}
 	}
 }
