Add bone mass to InverterParameters

--- a/Demos/Properties/launchSettings.json
+++ b/Demos/Properties/launchSettings.json
@@ -71,6 +71,10 @@
 		"PrintBoneHierarchyApp": {
 			"commandName": "Project",
 			"commandLineArgs": "PrintBoneHierarchyApp"
+		},
+		"CalculateBoneAttributesDemo": {
+			"commandName": "Project",
+			"commandLineArgs": "CalculateBoneAttributesDemo"
 		}
 	}
 }
