--- a/Demos/Properties/launchSettings.json
+++ b/Demos/Properties/launchSettings.json
@@ -75,6 +75,10 @@
 		"CalculateBoneAttributesDemo": {
 			"commandName": "Project",
 			"commandLineArgs": "CalculateBoneAttributesDemo"
+		},
+		"InverseKinematicsPerformanceDemo": {
+			"commandName": "Project",
+			"commandLineArgs": "InverseKinematicsPerformanceDemo"
 		}
 	}
 }
