Move leak tracking into its own solution configuration
I'd previously been turning on tracking of COM object leaks in Debug
builds. But now that I've added more features, the performance impact of
leak tracking has become severe enough to cause frame drops, so I don't
want it on all the time.

--- a/Demos/Demos.csproj
+++ b/Demos/Demos.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net452</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PlatformTarget>x64</PlatformTarget>
+    <Configurations>Debug;Release;LeakTracking</Configurations>
   </PropertyGroup>
   <Import Project="..\CommonAssemblyAttributes.targets" />
   <Import Project="..\RunSettings.targets" />
