--- a/InteropTypes/InteropTypes.csproj
+++ b/InteropTypes/InteropTypes.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net452</TargetFramework>
+    <Configurations>Debug;Release;LeakTracking</Configurations>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="protobuf-net" Version="2.3.2" />
