Enable native debugging for the Viewer project
This is necessary to see trace messages from the D3D debug layer.

--- a/Viewer/Properties/launchSettings.json
+++ b/Viewer/Properties/launchSettings.json
@@ -2,7 +2,8 @@
   "profiles": {
     "Viewer": {
       "commandName": "Project",
-      "commandLineArgs": "--data=$(SolutionDir)work"
+      "commandLineArgs": "--data=$(SolutionDir)work",
+	  "nativeDebugging": true
     }
   }
 }
