--- a/Viewer/Viewer.csproj
+++ b/Viewer/Viewer.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="SharpDX.DXGI" Version="4.0.1" />
     <PackageReference Include="SharpDX.Mathematics" Version="4.0.1" />
     <PackageReference Include="SharpDX.XAudio2" Version="4.0.1" />
+    <PackageReference Include="System.Collections.Immutable" Version="1.4.0" />
     <PackageReference Include="System.ValueTuple" Version="4.4.0" />
   </ItemGroup>
   <ItemGroup>
