Add demo for converting HD morphs to normal maps

--- a/Demos/Properties/launchSettings.json
+++ b/Demos/Properties/launchSettings.json
@@ -91,6 +91,11 @@
 		"ApplyHdMorphDemo": {
 			"commandName": "Project",
 			"commandLineArgs": "ApplyHdMorphDemo"
+		},
+		"HdMorphToNormalMapConverterDemo": {
+			"commandName": "Project",
+			"commandLineArgs": "HdMorphToNormalMapConverterDemo",
+			"nativeDebugging": true
 		}
 	}
 }
